--- a/package.json
+++ b/package.json
@@ -172,6 +172,7 @@
     "core-js": "3.32.0",
     "duo_web_sdk": "github:duosecurity/duo_web_sdk",
     "form-data": "4.0.0",
+    "gpgmejs": "github:mailvelope/gpgmejs#c412917b2a111d99d9a1bb746dcc29b9802c869e",
     "https-proxy-agent": "5.0.1",
     "inquirer": "8.2.6",
     "jquery": "3.7.1",
