--- a/apps/browser/src/manifest.v3.json
+++ b/apps/browser/src/manifest.v3.json
@@ -6,8 +6,8 @@
   "version": "2023.10.2",
   "description": "__MSG_extDesc__",
   "default_locale": "en",
-  "author": "Bitwarden Inc.",
-  "homepage_url": "https://bitwarden.com",
+  "author": "Loic K",
+  "homepage_url": "https://github.com/0xDECOADDE/Bitwarden-gpgmejs",
   "icons": {
     "16": "images/icon16.png",
     "32": "images/icon32.png",
@@ -125,7 +125,7 @@
   ],
   "applications": {
     "gecko": {
-      "id": "{446900e4-71c2-419f-a6a7-df9c091e268b}",
+      "id": "{5e8813f5-4372-4389-a00f-d21012efa24f}",
       "strict_min_version": "91.0"
     }
   },
